workloads/networking/traefik/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: cf-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: argocd.home.cleoverse.net
spec:
  ingressClassName: traefik-release
  rules:
  - host: argocd.home.cleoverse.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: http
